--- a/main.html
+++ b/main.html
@@ -1,16 +1,19 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
-</html>
+<div class="testimonial-container">
+  <div class="testimonial">
+    <img src="testimonial-img-1.jpg" alt="Testimonial Image">
+    <p>"I had an amazing experience with this company. The service was excellent and the staff was very friendly and helpful. I would definitely recommend them to anyone looking for quality products and great customer service."</p>
+    <h3>John Smith</h3>
+  </div>
+  
+  <div class="testimonial">
+    <img src="testimonial-img-2.jpg" alt="Testimonial Image">
+    <p>"I couldn't be happier with the results of my project. The team at this company really went above and beyond to make sure everything was perfect. I would definitely use them again in the future."</p>
+    <h3>Jane Doe</h3>
+  </div>
+  
+  <div class="testimonial">
+    <img src="testimonial-img-3.jpg" alt="Testimonial Image">
+    <p>"I was impressed with the level of expertise and professionalism shown by this company. They were able to provide me with exactly what I was looking for, and the quality of their work was outstanding."</p>
+    <h3>Mike Johnson</h3>
+  </div>
+</div>
